--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <li><a href="#par1">Історія виникнення</a></li>
       <li><a href="#par2">Харчування</a></li>
       <li><a href="#par3">Хвороби</a></li>
+      <li><a href="#par4">Тест</a></li>
     </ul>
-    <img src="1.jpg" alt="Зображення" width="800" height="400" />
+    <img src="image.jpg" alt="Зображення" width="800" height="400" />
     <p id="par1"></p>
     <h2>Історія виникнення</h2>
     <p>
@@ -130,7 +131,9 @@
       allowfullscreen
     >
     </iframe>
-
+    <p id="par4"></p>
+    <h2>Хвороби</h2>
+    <nav> <a href="form.html">Посилання на проходження тесту</a></nav>
     <hr />
     <address>
       Адреса: м. Львів, вул. Федьковича 60А <br />
